--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.16.4",
     "http-errors": "^1.6.3",
     "morgan": "^1.9.1",
-    "pug": "^2.0.0-beta11",
+    "pug": "^2.0.3",
+    "pug-cli": "^1.0.0-alpha6",
     "spotify-web-api-node": "^4.0.0"
   }
 }
