--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "^1.6.3",
     "morgan": "^1.9.1",
     "pug": "^2.0.0-beta11",
-    "spotify-web-api-node": "^4.0.0"
+    "spotify-web-api-node": "^4.0.0",
+    "request": "^2.88.0"
   }
 }
