--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "request": "^2.88.0",
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
-    "spotify-web-api-node": "^4.0.0"
+    "spotify-web-api-node": "^4.0.0",
+    "mongoose": "^5.5.4"
   }
 }
